--- a/index.html
+++ b/index.html
@@ -5,19 +5,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="author" content="CapiCode">
+    <meta name="description" content="CapiCode - Etudiant / Autodidacte - Développement web (HTML, CSS, JS, PHP...)">
+    <title>CapiCode - Etudiant & Autodidacte</title>
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Cabin:300,400,600,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?sfamily=Press+Start+2P&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Hi+Melody&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Atomic+Age&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Text+Me+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bahiana&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Major+Mono+Display&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/mq.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script> -->
-    <title>CapiCode</title>
 </head>
 
 <body>
-    <div class="container">
-
+    <main>
         <div class="banner">
             <ul class="circles">
                 <li></li>
@@ -52,12 +59,7 @@
                                 propos</a></li>
                         <li class="navigation__item"><a class="navigation__link bord" href="#skill"
                                 id="link-skill">Compétences</a></li>
-                        <li class="navigation__item"><a class="navigation__link bord" href="#project"
-                                id="link-project">Projets</a></li>
-                        <li class="navigation__item"><a class="navigation__link bord" href="#contact"
-                                id="link-contact">Contact</a></li>
                     </ul>
-
             </nav>
             <div class="hero-text" id="hero-text">
                 <h1>Salut! <img src="img/hand.png" class="viber" alt="Hand"></h1>
@@ -82,10 +84,12 @@
                             Développeur</span> spécialisé dans la <span class="highlith">conception web design</span> et
                         <span class="highlith">intégration de sites web</span>.
                         Etant assoiffé de connaissances et de nouvelles technologies de
-                        manière générale, je passe la majorité partie de mon temps libre à décupler mes compétences ainsi qu'à lire des articles, blogs.
+                        manière générale, je passe la majorité partie de mon temps libre à décupler mes compétences
+                        ainsi qu'à lire des articles, blogs.
                         Tombé par hasard dans <span class="highlith">l'univers du code</span>, j'ai commencé par créer
                         des morceaux de codes par curiosité,
-                        aujourd'hui je réalise avec passion de <span class="highlith">fines créations</span> pour donner vie à mes idées.
+                        aujourd'hui je réalise avec passion de <span class="highlith">fines créations</span> pour donner
+                        vie à mes idées.
                         J'adore <span class="highlith">apprendre</span> de mon côté, de façon à rester en <span
                             class="highlith">veille permanente</span>.
                     </p>
@@ -110,132 +114,96 @@
         </section>
         <section class="skill" id="skill">
             <div class="skill__content">
-                <div class="skill__box">
-                    <div class="skill__box-tech">
-                        <div>
-                            <h3>💻 Techno & Frameworks</h3>
-                        </div>
-                        <div class="skill__box-picture">
-                            <div>
-                                <img src="img/skill/html.svg" alt="Html">
-                            </div>
-                            <div>
-                                <img src="img/skill/css.svg" alt="Css">
-                            </div>
-                            <div>
-                                <img src="img/skill/javascript.svg" alt="Javascript">
-                            </div>
-                            <div>
-                                <img src="img/skill/c_sharp.svg" alt="C#">
-                            </div>
-                            <div>
-                                <img src="img/skill/php.svg" alt="PHP">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="skill__box-tool">
-                        <div>
-                            <h3>⚗️ Outils & Environnement</h3>
-                        </div>
-                        <div class="skill__box-picture">
-                            <div>
-                                <img src="img/skill/bulma.svg" alt="Bulma" class="icon-bulma">
-                            </div>
-                            <div>
-                                <img src="img/skill/xamarin.svg" alt="Xamarin">
-                            </div>
-                            <div>
-                                <img src="img/skill/git.svg" alt="Git">
-                            </div>
-                            <div>
-                                <img src="img/skill/github.svg" alt="Github">
-                            </div>
-                            <div>
-                                <img src="img/skill/adobexd.svg" alt="Adobe XD">
-                            </div>
-                        </div>
-                    </div>
+                <h3 class="heading__primary">💻 Technologies & Outils</h3>
+                <div class="skill__content--box">
+                    <p class="skill__content--stack">HTML</p>
+                    <p class="skill__content--stack">CSS</p>
+                    <p class="skill__content--stack">JS</p>
+                    <p class="skill__content--stack">C#</p>
+                    <p class="skill__content--stack">PHP</p>
+                    <p class="skill__content--stack">SQL</p>
+                    <p class="skill__content--stack">Bulma</p>
+                    <p class="skill__content--stack">Git</p>
+                    <p class="skill__content--stack">Github</p>
+                    <p class="skill__content--stack">Adobe XD</p>
+                    <p class="skill__content--stack">Xamarin</p>
                 </div>
             </div>
-            <!-- <div class="skill__illustration">
-                <img src="img/skill.svg" alt="skill">
-            </div> -->
-    </div>
-    </div>
-    </section>
-    <section class="project" id="project">
-        <div class="project-box">
-            <div class="project-portfolio">
-                <div class="project-illustration">
-                    <img src="img/project/portfolio.png" alt="">
-                </div>
-                <div class="project-content">
-                    <h3>Portfolio personnel</h3>
-                    <p class="desc">Ce premier projet est un portfolio réalisé pour mettre en
-                        valeur mes
-                        compétences ainsi que l'étendu de mes travaux.
-                        Celui-ci sera en constante évolution.
-                        L'interface utilisateur exploite principalement le standard CSS3 (Flexbox), les îcones
-                        (Icon8)
-                        et les librairies (jQuery, Scrollreveal).
-                    </p>
-                    <div class="box-stack">
-                        <p class="highlith-stack">HTML</p>
-                        <p class="highlith-stack">CSS</p>
-                        <p class="highlith-stack">Javascript</p>
-                    </div>
-                    <div class="box-link">
-                        <img src="img/project/merge.png" class="icon-merge logo-animated " alt="Source">
-                        <a href="https://github.com/CapiCode/capicode.github.io" class="btn-project"
-                            target="_blank">Voir la Source ⇢</a>
-                        <img src="img/project/world.png" class="icon-world logo-animated " alt="Website">
-                        <a href="https://capicode.github.io/" class="btn-project">Visiter ⇢</a>
-                    </div>
-                </div>
+        </section>
 
+        <section class="project" id="project">
+            <div class="project-box">
+                <div class="project-portfolio">
+                    <div class="project-illustration">
+                        <img src="img/project/portfolio.png" alt="">
+                    </div>
+                    <div class="project-content">
+                        <h3>Portfolio personnel</h3>
+                        <p class="desc">Ce premier projet est un portfolio réalisé pour mettre en
+                            valeur mes
+                            compétences ainsi que l'étendu de mes travaux.
+                            Celui-ci sera en constante évolution.
+                            L'interface utilisateur exploite principalement le standard CSS3 (Flexbox), les îcones
+                            (Icon8)
+                            et les librairies (jQuery, Scrollreveal).
+                        </p>
+                        <div class="box-stack">
+                            <p class="highlith-stack">HTML</p>
+                            <p class="highlith-stack">CSS</p>
+                            <p class="highlith-stack">Javascript</p>
+                        </div>
+                        <div class="box-link">
+                            <img src="img/project/merge.png" class="icon-merge logo-animated " alt="Source">
+                            <a href="https://github.com/CapiCode/capicode.github.io" class="btn-project"
+                                target="_blank">Voir la Source ⇢</a>
+                            <img src="img/project/world.png" class="icon-world logo-animated " alt="Website">
+                            <a href="https://capicode.github.io/" class="btn-project">Visiter ⇢</a>
+                        </div>
+                    </div>
+
+                </div>
             </div>
-        </div>
-    </section>
-    <section class="contact" id="contact">
-        <div class="contact-content">
-            <div class="contact-header">
-                <div class="contact-header-title">
-                    <h3>Une information ? Une question ?</h3>
-                </div>
-                <div class="contact-header-intro">
-                    <p>Vous pouvez me contacter pour tout renseignements, que ce soit pour une proposition de
-                        collaboration ou simplement pour discuter!</p>
-                </div>
-                <div class="contact-button">
-                    <a href="mailto:g.edouardc@gmail.com">Contact ⇢</a>
-                </div>
-            </div>
-            <div class="contact-box">
-                <div class="contact-coordinates">
-                    <h3>Coordonnées</h3>
-                </div>
-                <div class="box-mail">
-                    <div><img src="img/contact/email.svg" alt=""></div>
-                    <div>
-                        <p>g.edouardc@gmail.com</p>
+        </section>
+        <section class="contact" id="contact">
+            <div class="contact-content">
+                <div class="contact-header">
+                    <div class="contact-header-title">
+                        <h3>Une information ? Une question ?</h3>
+                    </div>
+                    <div class="contact-header-intro">
+                        <p>Vous pouvez me contacter pour tout renseignements, que ce soit pour une proposition de
+                            collaboration ou simplement pour discuter!</p>
+                    </div>
+                    <div class="contact-button">
+                        <a href="mailto:g.edouardc@gmail.com">Contact ⇢</a>
                     </div>
                 </div>
-                <div class="box-location">
-                    <div><img src="img/contact/location.svg" alt=""></div>
-                    <div>
-                        <p>57000 - Metz</p>
+                <div class="contact-box">
+                    <div class="contact-coordinates">
+                        <h3>Coordonnées</h3>
+                    </div>
+                    <div class="box-mail">
+                        <div><img src="img/contact/email.svg" alt=""></div>
+                        <div>
+                            <p>g.edouardc@gmail.com</p>
+                        </div>
+                    </div>
+                    <div class="box-location">
+                        <div><img src="img/contact/location.svg" alt=""></div>
+                        <div>
+                            <p>57000 - Metz</p>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="contact-illustration">
-            <img src="img/contact/as.svg" alt="">
-        </div>
-    </section>
-    <button id="btn-top">
-        <div class="index"><img src="img/index.png" class="fas fa-angle-double-up logo-animated"></img></div>
-    </button>
-    </div>
+            <div class="contact-illustration">
+                <img src="img/contact/as.svg" alt="">
+            </div>
+        </section>
+        <button id="btn-top">
+            <div class="index"><img src="img/index.png" class="fas fa-angle-double-up logo-animated"></img></div>
+        </button>
+    </main>
     <footer>
         <p>© 2019 | capicode.github.io 👻</p>
     </footer>
