--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
                                 propos</a></li>
                         <li class="navigation__item"><a class="navigation__link bord" href="#skill"
                                 id="link-skill">Compétences</a></li>
+                        <li class="navigation__item"><a class="navigation__link bord" href="#project"
+                                id="link-project">Projets</a></li>
                     </ul>
             </nav>
             <div class="hero-text" id="hero-text">
@@ -132,35 +134,74 @@
         </section>
 
         <section class="project" id="project">
-            <div class="project-box">
-                <div class="project-portfolio">
-                    <div class="project-illustration">
-                        <img src="img/project/portfolio.png" alt="">
+            <div class="project-portfolio">
+                <div class="project-illustration">
+                    <img src="img/project/shareplat.PNG" alt="">
+                </div>
+                <div class="project-content">
+                    <h3>Plateforme</h3>
+                    <p class="desc">Plateforme de ressources en collaboration.
+                        Destiné aux élèves de ma promotion actuelle, celle-ci a pour but de transmettre et de partager des connaissances et ressources facilitant l'apprentissage du web.
+                    </p>
+                    <div class="box-stack">
+                        <p class="highlith-stack">HTML</p>
+                        <p class="highlith-stack">CSS</p>
+                        <p class="highlith-stack">Javascript</p>
+                        <p class="highlith-stack">PHP</p>
                     </div>
-                    <div class="project-content">
-                        <h3>Portfolio personnel</h3>
-                        <p class="desc">Ce premier projet est un portfolio réalisé pour mettre en
-                            valeur mes
-                            compétences ainsi que l'étendu de mes travaux.
-                            Celui-ci sera en constante évolution.
-                            L'interface utilisateur exploite principalement le standard CSS3 (Flexbox), les îcones
-                            (Icon8)
-                            et les librairies (jQuery, Scrollreveal).
-                        </p>
-                        <div class="box-stack">
-                            <p class="highlith-stack">HTML</p>
-                            <p class="highlith-stack">CSS</p>
-                            <p class="highlith-stack">Javascript</p>
-                        </div>
-                        <div class="box-link">
-                            <img src="img/project/merge.png" class="icon-merge logo-animated " alt="Source">
-                            <a href="https://github.com/CapiCode/capicode.github.io" class="btn-project"
-                                target="_blank">Voir la Source ⇢</a>
-                            <img src="img/project/world.png" class="icon-world logo-animated " alt="Website">
-                            <a href="https://capicode.github.io/" class="btn-project">Visiter ⇢</a>
-                        </div>
+                    <div class="box-link">
+                        <img src="img/project/loading.png" class="icon-merge logo-animated " alt="Source">
+                        <a href="#project" class="btn-project">En cours</a>
                     </div>
+                </div>
+            </div>
+            <div class="project-portfolio">
+                <div class="project-illustration">
+                    <img src="img/project/funnyrecipes.PNG" alt="">
+                </div>
+                <div class="project-content">
+                    <h3>Drôle de recettes</h3>
+                    <p class="desc">Conception en cours d'une interface permettant d'élaborer et de stocker des recettes de cuisines.
+                        Gestion utilisateurs, CRUD.
+                    </p>
+                    <div class="box-stack">
+                        <p class="highlith-stack">HTML</p>
+                        <p class="highlith-stack">CSS</p>
+                        <p class="highlith-stack">Javascript</p>
+                        <p class="highlith-stack">PHP</p>
+                    </div>
+                    <div class="box-link">
+                        <img src="img/project/loading.png" class="icon-merge logo-animated " alt="Source">
+                        <a href="#project" class="btn-project">En cours</a>
+                    </div>
+                </div>
+            </div>
 
+            <div class="project-portfolio">
+                <div class="project-illustration">
+                    <img src="img/project/portfolio2.png" alt="">
+                </div>
+                <div class="project-content">
+                    <h3>Portfolio personnel</h3>
+                    <p class="desc">Ce premier projet est un portfolio réalisé pour mettre en
+                        valeur mes
+                        compétences ainsi que l'étendu de mes réalisations.
+                        Celui-ci sera en constante évolution.
+                        L'interface exploite principalement le standard CSS3 (Flexbox), les îcones
+                        (Icon8) et les librairies (jQuery, Scrollreveal).
+                    </p>
+                    <div class="box-stack">
+                        <p class="highlith-stack">HTML</p>
+                        <p class="highlith-stack">CSS</p>
+                        <p class="highlith-stack">Javascript</p>
+                    </div>
+                    <div class="box-link">
+                        <img src="img/project/merge.png" class="icon-merge logo-animated " alt="Source">
+                        <a href="https://github.com/CapiCode/capicode.github.io" class="btn-project"
+                            target="_blank">Voir la Source ⇢</a>
+                        <img src="img/project/world.png" class="icon-world logo-animated " alt="Website">
+                        <a href="https://capicode.github.io/" class="btn-project">Visiter ⇢</a>
+                    </div>
                 </div>
             </div>
         </section>
