--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
             <div class="project-portfolio">
                 <div class="project-illustration">
-                    <img src="img/project/portfolio2.png" alt="">
+                    <img src="img/project/portfolio.png" alt="">
                 </div>
                 <div class="project-content">
                     <h3>Portfolio personnel</h3>
