--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                     <img src="img/project/portfolio.png" alt="">
                 </div>
                 <div class="project-content">
-                    <h3>Portfoli</h3>
+                    <h3>Portfolio</h3>
                     <p class="desc">Ce premier projet est un portfolio réalisé pour mettre en
                         valeur mes
                         compétences ainsi que l'étendu de mes réalisations.
