--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
                                 id="link-skill">Compétences</a></li>
                         <li class="navigation__item"><a class="navigation__link bord" href="#project"
                                 id="link-project">Projets</a></li>
+                                <li class="navigation__item"><a class="navigation__link bord" href="#contact"
+                                    id="link-contact">Contact</a></li>
                     </ul>
             </nav>
             <div class="hero-text" id="hero-text">
