--- a/index.html
+++ b/index.html
@@ -136,54 +136,54 @@
         </section>
 
         <section class="project" id="project">
-            <div class="project-portfolio">
-                <div class="project-illustration">
+            <div class="project__portfolio">
+                <div class="project__illustration">
                     <img src="img/project/shareplat.PNG" alt="">
                 </div>
-                <div class="project-content">
+                <div class="project__content">
                     <h3>Plateforme</h3>
                     <p class="desc">Plateforme de ressources en collaboration.
                         Destiné aux élèves de ma promotion actuelle, celle-ci a pour but de transmettre et de partager des connaissances et ressources facilitant l'apprentissage du web.
                     </p>
-                    <div class="box-stack">
+                    <div class="project__box--stack">
                         <p class="highlith-stack">HTML</p>
                         <p class="highlith-stack">CSS</p>
                         <p class="highlith-stack">Javascript</p>
                         <p class="highlith-stack">PHP</p>
                     </div>
-                    <div class="box-link">
+                    <div class="project__box--link">
                         <img src="img/project/loading.png" class="icon-merge logo-animated " alt="Source">
                         <a href="#project" class="btn-project">En cours</a>
                     </div>
                 </div>
             </div>
-            <div class="project-portfolio">
-                <div class="project-illustration">
+            <div class="project__portfolio">
+                <div class="project__illustration">
                     <img src="img/project/funnyrecipes.PNG" alt="">
                 </div>
-                <div class="project-content">
+                <div class="project__content">
                     <h3>Drôle de recettes</h3>
                     <p class="desc">Conception en cours d'une interface permettant d'élaborer et de stocker des recettes de cuisines.
                         Gestion utilisateurs, CRUD.
                     </p>
-                    <div class="box-stack">
+                    <div class="project__box--stack">
                         <p class="highlith-stack">HTML</p>
                         <p class="highlith-stack">CSS</p>
                         <p class="highlith-stack">Javascript</p>
                         <p class="highlith-stack">PHP</p>
                     </div>
-                    <div class="box-link">
+                    <div class="project__box--link">
                         <img src="img/project/loading.png" class="icon-merge logo-animated " alt="Source">
                         <a href="#project" class="btn-project">En cours</a>
                     </div>
                 </div>
             </div>
 
-            <div class="project-portfolio">
-                <div class="project-illustration">
+            <div class="project__portfolio">
+                <div class="project__illustration">
                     <img src="img/project/portfolio.png" alt="">
                 </div>
-                <div class="project-content">
+                <div class="project__content">
                     <h3>Portfolio</h3>
                     <p class="desc">Ce premier projet est un portfolio réalisé pour mettre en
                         valeur mes
@@ -192,12 +192,12 @@
                         L'interface exploite principalement le standard CSS3 (Flexbox), les îcones
                         (Icon8) et les librairies (jQuery, Scrollreveal).
                     </p>
-                    <div class="box-stack">
+                    <div class="project__box--stack">
                         <p class="highlith-stack">HTML</p>
                         <p class="highlith-stack">CSS</p>
                         <p class="highlith-stack">Javascript</p>
                     </div>
-                    <div class="box-link">
+                    <div class="project__box--link">
                         <img src="img/project/merge.png" class="icon-merge logo-animated " alt="Source">
                         <a href="https://github.com/CapiCode/capicode.github.io" class="btn-project"
                             target="_blank">Voir la Source ⇢</a>
