--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                     </div>
                 </div>
             </div>
-            <div class="contact-illustration">
+            <div class="contact__illustration">
                 <img src="img/contact/as.svg" alt="">
             </div>
         </section>
