--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <section class="project" id="project">
             <div class="project__portfolio">
                 <div class="project__illustration">
-                    <img src="img/project/shareplat.PNG" alt="">
+                    <img src="img/project/shareplat-min.PNG" alt="">
                 </div>
                 <div class="project__content">
                     <h3>Plateforme</h3>
@@ -159,7 +159,7 @@
             </div>
             <div class="project__portfolio">
                 <div class="project__illustration">
-                    <img src="img/project/funnyrecipes.PNG" alt="">
+                    <img src="img/project/funnyrecipes-min.PNG" alt="">
                 </div>
                 <div class="project__content">
                     <h3>Drôle de recettes</h3>
@@ -181,7 +181,7 @@
 
             <div class="project__portfolio">
                 <div class="project__illustration">
-                    <img src="img/project/portfolio.png" alt="">
+                    <img src="img/project/portfolio-min.png" alt="">
                 </div>
                 <div class="project__content">
                     <h3>Portfolio</h3>
