--- a/index.html
+++ b/index.html
@@ -214,8 +214,7 @@
                         <h3>Une information ? Une question ?</h3>
                     </div>
                     <div class="contact-header-intro">
-                        <p>Vous pouvez me contacter pour tout renseignements, que ce soit pour une proposition de
-                            collaboration ou simplement pour discuter!</p>
+                        <p>Vous pouvez me contacter pour tout renseignements ou simplement pour discuter !</p>
                     </div>
                     <div class="contact-button">
                         <a href="mailto:g.edouardc@gmail.com">Contact ⇢</a>
