--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                         <p>Vous pouvez me contacter pour tout renseignements ou simplement pour discuter !</p>
                     </div>
                     <div class="contact-button">
-                        <a href="mailto:g.edouardc@gmail.com">Contact ⇢</a>
+                        <a href="mailto:prodcapicode@gmail.com">Contact ⇢</a>
                     </div>
                 </div>
                 <div class="contact-box">
@@ -227,7 +227,7 @@
                     <div class="box-mail">
                         <div><img src="img/contact/email.svg" alt=""></div>
                         <div>
-                            <p>g.edouardc@gmail.com</p>
+                            <p>prodcapicode@gmail.com</p>
                         </div>
                     </div>
                     <div class="box-location">
