--- a/index.html
+++ b/index.html
@@ -50,28 +50,32 @@
         <section class="home">
             <nav class="navigation">
                 <div class="navigation__logo-box">
-                    <a class="navigation__logo" href="index.html" id="link-home">CapiCode</a>
+                    <a class="navigation__logo fade" href="index.html" id="link-home">CapiCode</a>
                 </div>
 
                 <div class="navigation__list-box">
                     <ul class="navigation__list">
-                        <li class="navigation__item"><a class="navigation__link bord" href="#about" id="link-about">A
+                        <li class="navigation__item"><a class="navigation__link bord fade2" href="#about"
+                                id="link-about">A
                                 propos</a></li>
-                        <li class="navigation__item"><a class="navigation__link bord" href="#skill"
+                        <li class="navigation__item"><a class="navigation__link bord fade2" href="#skill"
                                 id="link-skill">Compétences</a></li>
-                        <li class="navigation__item"><a class="navigation__link bord" href="#project"
+                        <li class="navigation__item"><a class="navigation__link bord fade2" href="#project"
                                 id="link-project">Projets</a></li>
-                                <li class="navigation__item"><a class="navigation__link bord" href="#contact"
-                                    id="link-contact">Contact</a></li>
+                        <li class="navigation__item"><a class="navigation__link bord fade2" href="#contact"
+                                id="link-contact">Contact</a></li>
                     </ul>
             </nav>
-            <div class="hero-text" id="hero-text">
+            <div class="hero-text animated" id="hero-text">
                 <h1>Salut! <img src="img/hand.png" class="viber" alt="Hand"></h1>
                 <h2>Bienvenue sur mon portfolio<img src="img/globe.png" alt="Globe"></h2>
             </div>
-            <a href="#" id="icon-arrow" class="icon-arrow">
-                <img src="img/arrow_bottom.svg" alt="Bottom" class="arrow">
-            </a>
+            <div class="hero-icon animated">
+                <a href="#" id="icon-arrow" class="icon-arrow animated">
+                    <img src="img/arrow_bottom.svg" alt="Bottom" class="arrow">
+                </a>
+            </div>
+
         </section>
         <section class="about" id="about">
             <div class="about__illustration">
@@ -143,7 +147,8 @@
                 <div class="project__content">
                     <h3>Plateforme</h3>
                     <p class="desc">Plateforme de ressources en collaboration.
-                        Destiné aux élèves de ma promotion actuelle, celle-ci a pour but de transmettre et de partager des connaissances et ressources facilitant l'apprentissage du web.
+                        Destiné aux élèves de ma promotion actuelle, celle-ci a pour but de transmettre et de partager
+                        des connaissances et ressources facilitant l'apprentissage du web.
                     </p>
                     <div class="project__box--stack">
                         <p class="highlith-stack">HTML</p>
@@ -163,7 +168,8 @@
                 </div>
                 <div class="project__content">
                     <h3>Drôle de recettes</h3>
-                    <p class="desc">Conception en cours d'une interface permettant d'élaborer et de stocker des recettes de cuisines.
+                    <p class="desc">Conception en cours d'une interface permettant d'élaborer et de stocker des recettes
+                        de cuisines.
                         Gestion utilisateurs, CRUD.
                     </p>
                     <div class="project__box--stack">
