--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
                 <div class="navigation">
                     <h2 class="fade">CapiCode</h2>
                     <div class="navigation__items">
-                        <a href="#skills" class="bord fadet">A propos</a>
-                        <a href="#skills" class="bord fadet">Compétences</a>
-                        <a href="#portfolio" class="bord fadet">Projets</a>
-                        <a href="#hire" class="bord fadet">Contact</a>
+                        <a href="#about" class="bord fadet" id="link-about">A propos</a>
+                        <a href="#skill" class="bord fadet" id="link-skill">Compétences</a>
+                        <a href="#projects" class="bord fadet" id="link-project">Projets</a>
+                        <a href="#contact" class="bord fadet" id="link-contact">Contact</a>
                         <!-- <a class="toggle-nav"><i class="fa fa-bars"></i></a> -->
                     </div>
                 </div>
