--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
-    <!-- <link rel="stylesheet" href="css/mq.css"> -->
+    <link rel="stylesheet" href="css/mq.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 
@@ -50,7 +50,7 @@
     <section class="home">
         <nav>
             <div class="navigation">
-                <a href="#home" class="fade logo" id="link-home">CapiCode</a>
+                <a href="#home" class="fade logo" id="link-home">< CapiCode /></a>
                 <div class="navigation__items">
                     <a href="#about" class="bord fadet" id="link-about">A propos</a>
                     <a href="#skill" class="bord fadet" id="link-skill">Compétences</a>
@@ -115,19 +115,21 @@
         <div class="skill__content">
             <h3 class="heading__primary">💻 Technologies & Outils</h3>
             <div class="skill__content--box">
-                <p class="skill__content--stack">HTML</p>
-                <p class="skill__content--stack">CSS</p>
-                <p class="skill__content--stack">JS</p>
-                <p class="skill__content--stack">C#</p>
-                <p class="skill__content--stack">PHP</p>
-                <p class="skill__content--stack">SQL</p>
-                <p class="skill__content--stack">Bulma</p>
-                <p class="skill__content--stack">Git</p>
-                <p class="skill__content--stack">Github</p>
-                <p class="skill__content--stack">Adobe XD</p>
-                <p class="skill__content--stack">Xamarin</p>
-                <p class="skill__content--stack">SCSS</p>
-                <p class="skill__content--stack">Wordpress</p>
+                <div class="skill__overlay">
+                    <p class="skill__content--stack">HTML</p>
+                    <p class="skill__content--stack">CSS</p>
+                    <p class="skill__content--stack">JS</p>
+                    <p class="skill__content--stack">C#</p>
+                    <p class="skill__content--stack">PHP</p>
+                    <p class="skill__content--stack">SQL</p>
+                    <p class="skill__content--stack">Bulma</p>
+                    <p class="skill__content--stack">Git</p>
+                    <p class="skill__content--stack">Github</p>
+                    <p class="skill__content--stack">Adobe XD</p>
+                    <p class="skill__content--stack">Xamarin</p>
+                    <p class="skill__content--stack">SCSS</p>
+                    <p class="skill__content--stack">Wordpress</p>
+                </div>
             </div>
         </div>
     </section>
@@ -215,34 +217,7 @@
                     <p>Vous pouvez me contacter pour tout renseignements ou simplement pour discuter !</p>
                 </div>
                 <div class="contact-button">
-                    <a href="mailto:devcapicode@gmail.com">Contact ⇢</a>
-                </div>
-            </div>
-            <div class="contact-box">
-                <div class="contact-coordinates">
-                    <h3>Coordonnées</h3>
-                </div>
-                <div class="box-github">
-                    <div>
-                        <a href="https://github.com/CapiCode" target="_blank">
-                            <img src="img/contact/github.svg" alt="">
-                        </a>
-
-                    </div>
-                </div>
-                <div class="box-linkedin">
-                    <div>
-                        <a href="https://www.linkedin.com/in/giovanni-charles-edouard-a15337179" target="_blank">
-                            <img src="img/contact/linkedin.svg" alt="">
-                        </a>
-
-                    </div>
-                </div>
-                <div class="box-mail">
-                    <div><img src="img/contact/email.svg" alt=""></div>
-                    <div>
-                        <p>devcapicode@gmail.com</p>
-                    </div>
+                    <a href="mailto:devcapicode@gmail.com" title="Email" target="_blank">Contact ⇢</a>
                 </div>
             </div>
         </div>
