--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                     <p>Vous pouvez me contacter pour tout renseignements ou simplement pour discuter !</p>
                 </div>
                 <div class="contact-button">
-                    <a href="mailto:devcapicode@gmail.com" title="Email" target="_blank">Contact ⇢</a>
+                    <a href="mailto:devcapicode@gmail.com" title="Email" target="_blank">Contacter ⇢</a>
                 </div>
             </div>
         </div>
