--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 
-<body>
+<body class="loading">
     <div class="banner">
         <ul class="circles">
             <li></li>
@@ -231,8 +231,17 @@
     <footer>
         <p>Tous droits réservés | © 2020 | CapiCode 👻</p>
     </footer>
+
+    <div id="overlay"></div>
+    <div id="preloader">
+        <img src="img/loadreb.svg" alt="">
+    </div>
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.min.js"></script>
-    <script src="app.js"></script>
+    <script defer src="js/app.js"></script>
+    <script defer src="js/scroll.js"></script>
+    <script defer src="js/load.js"></script>
+    <script defer src="js/typewriter.js"></script>
 </body>
 
 </html>
