Update meta head

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="author" content="CapiCode">
-    <meta name="description" content="CapiCode - Etudiant / Autodidacte - Développement web (HTML, CSS, JS, PHP...)">
+    <meta name="description" content="CapiCode - Portfolio">
     <title>CapiCode - Etudiant & Autodidacte</title>
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Cabin:300,400,600,700&display=swap" rel="stylesheet">
