--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="author" content="CapiCode">
     <meta name="description" content="CapiCode - Portfolio">
-    <title>CapiCode - Etudiant & Autodidacte</title>
+    <meta property="og:title" content="CapiCode - Portfolio">
+    <title>CapiCode</title>
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Cabin:300,400,600,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?sfamily=Press+Start+2P&display=swap" rel="stylesheet">
